# story-graph

./: .env.example  .gitignore  LICENSE  README.md  blog-post-story-graph-hotel.md  docker-compose.yml
story-graph-backend/: Dockerfile  README.md  main.py  pyproject.toml
story-graph-backend/app/: config.py  main.py  schemas.py  state.py
story-graph-backend/app/routes/: admin_chat.py  chat.py  graph.py
story-graph-backend/app/services/: admin_graph_tools.py  chat_repository.py  graph_repository.py  llm_client.py  llm_extractor.py
story-graph-backend/scripts/: seed_hotel_conversations.py
story-graph-frontend/: Dockerfile  app.py  pyproject.toml
story-graph-frontend/pages/: admin_chat.py
